--- a/index.html
+++ b/index.html
@@ -445,13 +445,14 @@
     background: #fff;
     box-shadow: 0 4px 20px rgba(0,0,0,0.06);
     margin-bottom: 30px;
-    touch-action: pan-x pan-y pinch-zoom; /* Allow both horizontal and vertical panning */
+    touch-action: pan-x; /* Allow horizontal panning for swipe gestures */
   }
 
   .carousel-inner {
     display: flex;
     transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1);
     will-change: transform; /* Optimize for smooth animations */
+    touch-action: pan-x; /* Allow horizontal panning */
   }
 
   .carousel-inner.swiping {
@@ -523,7 +524,7 @@
   .testimonial-carousel {
     max-width: 100%;
     overflow: hidden;
-    touch-action: pan-x pan-y pinch-zoom;
+    touch-action: pan-x;
   }
 
   .success-box {
@@ -600,6 +601,7 @@
     width: 100%;
     transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1);
     will-change: transform;
+    touch-action: pan-x; /* Allow horizontal panning */
   }
 
   .testimonial-inner.swiping, .carousel-inner.swiping {
@@ -825,6 +827,9 @@ function initCarousel(config) {
   const items = document.querySelectorAll(itemSelector);
   if (!inner || !dots || items.length === 0) return;
 
+  // Get the container (parent of inner)
+  const container = inner.parentElement;
+
   let currentSlide = 0;
   let autoSlide = true;
   const swipeState = { startX: 0, startY: 0, currentX: 0, isSwiping: false, threshold };
@@ -848,21 +853,23 @@ function initCarousel(config) {
     update();
   }
 
-  // Touch handlers
-  inner.addEventListener("touchstart", (e) => {
+  // Touch handlers - attach to container for better iOS support
+  const handleTouchStart = (e) => {
     autoSlide = false;
     swipeState.startX = e.touches[0].clientX;
     swipeState.startY = e.touches[0].clientY;
     swipeState.isSwiping = false;
-  }, { passive: true });
+  };
 
-  inner.addEventListener("touchmove", (e) => {
+  const handleTouchMove = (e) => {
     if (!swipeState.startX) return;
     swipeState.currentX = e.touches[0].clientX;
     const currentY = e.touches[0].clientY;
     const diffX = Math.abs(swipeState.currentX - swipeState.startX);
     const diffY = Math.abs(currentY - swipeState.startY);
-    if (diffX > 10 && diffX > diffY * 1.5) {
+    
+    // If horizontal movement is dominant, handle swipe
+    if (diffX > 5 && diffX > diffY * 1.2) {
       e.preventDefault(); // Prevent page scroll when swiping horizontally
       if (!swipeState.isSwiping) {
         swipeState.isSwiping = true;
@@ -871,9 +878,9 @@ function initCarousel(config) {
       const offset = swipeState.currentX - swipeState.startX;
       inner.style.transform = `translateX(calc(-${currentSlide * 100}% + ${offset}px))`;
     }
-  }, { passive: false });
+  };
 
-  inner.addEventListener("touchend", (e) => {
+  const handleTouchEnd = (e) => {
     if (!swipeState.isSwiping) {
       swipeState.startX = 0;
       return;
@@ -881,13 +888,20 @@ function initCarousel(config) {
     inner.classList.remove("swiping");
     const diffX = swipeState.currentX - swipeState.startX;
     const diffY = Math.abs(e.changedTouches[0].clientY - swipeState.startY);
-    if (Math.abs(diffX) > swipeState.threshold && Math.abs(diffX) > diffY * 1.5) {
+    if (Math.abs(diffX) > swipeState.threshold && Math.abs(diffX) > diffY * 1.2) {
       currentSlide = diffX < 0 ? (currentSlide + 1) % items.length : (currentSlide - 1 + items.length) % items.length;
     }
     update();
     swipeState.startX = 0;
     swipeState.isSwiping = false;
-  }, { passive: true });
+  };
+
+  // Attach handlers to container for iOS compatibility
+  if (container) {
+    container.addEventListener("touchstart", handleTouchStart, { passive: true });
+    container.addEventListener("touchmove", handleTouchMove, { passive: false });
+    container.addEventListener("touchend", handleTouchEnd, { passive: true });
+  }
 
   // Desktop drag
   inner.addEventListener("mousedown", (e) => {
